[gd_scene load_steps=7 format=3 uid="uid://dol3q3ytm735t"]

[ext_resource type="Script" uid="uid://8fhky1rvp2qk" path="res://reportar.gd" id="1_dkhm3"]
[ext_resource type="Texture2D" uid="uid://bjtgqijbx0n3m" path="res://gradient_2.jpg" id="1_shgmc"]
[ext_resource type="Texture2D" uid="uid://bl4obi4wxq6me" path="res://Diseño sin título (2).png" id="3_sqi6v"]
[ext_resource type="Texture2D" uid="uid://cr1cusjq0xq2k" path="res://Diseño sin título.png" id="4_34d8x"]
[ext_resource type="Texture2D" uid="uid://bpcmoatv0j1jw" path="res://rec (1).png" id="5_rypml"]
[ext_resource type="Texture2D" uid="uid://dqbv21stg7bm2" path="res://Diseño sin título (1).png" id="6_2myqv"]

[node name="REPORTAR" type="Node2D"]
script = ExtResource("1_dkhm3")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(594, 341)
scale = Vector2(0.394, 0.3455)
texture = ExtResource("1_shgmc")

[node name="Button3" type="Button" parent="."]
offset_left = 211.0
offset_top = 256.0
offset_right = 1299.0
offset_bottom = 1344.0
scale = Vector2(0.170182, 0.170332)
icon = ExtResource("3_sqi6v")

[node name="Button4" type="Button" parent="."]
offset_left = 483.0
offset_top = 439.0
offset_right = 1571.0
offset_bottom = 1527.0
scale = Vector2(0.168773, 0.174791)
icon = ExtResource("4_34d8x")

[node name="Button" type="Button" parent="."]
offset_left = 479.0
offset_top = 200.0
offset_right = 999.0
offset_bottom = 720.0
scale = Vector2(0.412831, 0.351696)
icon = ExtResource("5_rypml")
flat = true

[node name="Button2" type="Button" parent="."]
offset_left = 776.0
offset_top = 253.0
offset_right = 1864.0
offset_bottom = 1341.0
scale = Vector2(0.178411, 0.170376)
icon = ExtResource("6_2myqv")

[node name="Label" type="Label" parent="."]
offset_left = 138.0
offset_top = 17.0
offset_right = 1069.0
offset_bottom = 154.0
theme_override_font_sizes/font_size = 83
text = "¿QUIÉN ES EL HACKER ?"

[node name="Label2" type="Label" parent="."]
offset_left = 369.0
offset_top = 120.0
offset_right = 1371.0
offset_bottom = 234.0
theme_override_font_sizes/font_size = 19
text = "Selecciona al sospechoso y aprieta el botón rojo"

[node name="Label3" type="Label" parent="."]
offset_left = 153.0
offset_top = 162.0
offset_right = 1034.0
offset_bottom = 552.0
